--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.5",
     "flow-bin": "^0.67.1",
     "prettier": "^1.11.1",
     "react": "^16.2.0",
